# ringcentral

./: .env.example  .gitignore  Dockerfile  GUIDE.md  README.md  docker-compose.yml  pyproject.toml  referencefile.txt  requirements-dev.txt  requirements.txt  zprojectrequirements.txt
app/: __init__.py  config.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  rc_webhook.py
app/core/: exceptions.py  idempotency.py  logging.py  rc_validator.py
app/schemas/: call_summary_payload.py  rc_message.py  zapier_payload.py
app/services/: call_summary_handler.py  rc_api_client.py  rc_subscription_manager.py  redaction.py  zapier_forwarder.py
scripts/: create_subscription.py  rebuild_company_wide_subscription.py  reset_subscriptions.py  test_extension_list.py  test_phone_numbers.py  test_rc_auth.py  test_split_routing.py
tests/: conftest.py  test_call_summary.py  test_idempotency.py  test_rc_webhook.py  test_redaction.py  test_zapier_forwarder.py
